--- a/landingpage.html
+++ b/landingpage.html
@@ -105,7 +105,7 @@
     </nav>
     <section class="h-text">
         <span>Enjoy</span>
-        <h1>International Travel Agency</h1>
+        <h1> Travel With us...!!</h1>
 
         <br>
         <a href="#">Book your Trip</a>
